--- a/index.html
+++ b/index.html
@@ -3,28 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Garanta uma vida longa e cheia de alegria para seu melhor amigo">
+
+  <!-- descriçao do google -->
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <title>PetLife</title>
 </head>
+
  <body>
   <header>
     <a href="index.html">
-    <img src="img/logo.svg">
+      <img src="img/logo-white.svg" width="200" alt="Petlife">
     </a>
+
     <nav>
       <a href="#inicio">Inicio</a>
       <a href="#clinica">Clinica</a>
-      <a href="#farmacia">Farmacia</a>
-      <a href="#duvidas">Duvidas</a>
+      <a href="#farmacia">Farmácia</a>
+      <a href="#duvidas">Dúvidas</a>
     </nav>
+  </header>
+
      <section>
+      <img src="img/start-img.svg" alt="imagem logo" width="580px" height="580px">>
       <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
       <p>A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.</p>
       <a href="">Marque uma Consulta</a>
       <a href="">Conheça nossa História</a>
     </section>
     <section>
-      <h2>Cuidado Veterinário de Qualidade</h2>
+      <img src="img/clinic-img.svg">
+      <h2> Cuidado Veterinário de Qualidade</h2>
       <p>Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.</p>
       <ul>
         <li>Consultas de rotina e exames de saúde abrangentes</li>
@@ -38,13 +51,16 @@
     </section>
 
      <section>
+      <img src="img/shop-img.svg">
         <h2>Venha conferir nosso PetShop e farmacia</h2>
         <p>Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.</p>
     </section>
 
     <section>
         <h2>Ficou alguma dúvida?</h2>
+
         <div>
+          <img src="img/faq-img.svg" alt="">
           <p>Quais serviços são oferecidos pela clínica veterinária da PetLife?</p>
           <p>A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados para garantir a saúde e o bem-estar do seu pet.</p>
         </div> 
@@ -65,9 +81,7 @@
         </div>
     </section>
 
-  </header>
-
-  <footer>
+   <footer>
     <div>
       <h3>Links rápidos</h3>
       <a href="">Inicio</a>
@@ -77,11 +91,16 @@
     </div>
 
     <div>
-      <h3>Encontre-nos</h3>
+      <h3>Encontre-nos</h3>      
+        <p>Whatsapp:<a href="https://wa.me/553132281234" target="blank">(31) 3228-1234</a></p>
+        <p>Email:<a href="mailto:atendimento@petlife.com">atendimento@petlife.com</a></p>
+        <p>Endereço: Av. Governador Valadares, nº108, Centro</p>
+      </div>
       
+      <div id="copyright">
+      Desenvolvido por Gabriel Lacôrte
     </div>
-
-
+    </div>
   </footer>
   
 </body>
