--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <title>PetLife</title>
+   <title>PetLife</title>
 </head>
 
  <body>
@@ -26,14 +26,18 @@
       <a href="#farmacia">Farmácia</a>
       <a href="#duvidas">Dúvidas</a>
     </nav>
-  </header>
 
-     <section>
-      <img src="img/start-img.svg" alt="imagem logo" width="580px" height="580px">>
-      <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
-      <p>A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.</p>
-      <a href="">Marque uma Consulta</a>
-      <a href="">Conheça nossa História</a>
+  </header>
+    <main>
+     <section id="inicio">
+      <img src="img/start-img.svg" alt="imagem logo" width="580px" height="580px">
+      <div>
+       <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
+       <p class="paragrafoOne">A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.</p>
+       <a class="botao1" href="" target="_blank">Marque uma Consulta</a>
+       <a class="botao" href=""target="blank">Conheça nossa História</a>
+     </div>
+     <img class="absolute" src="img/shape.svg" alt="imagem shape" loading="lazy">
     </section>
     <section>
       <img src="img/clinic-img.svg">
@@ -80,6 +84,7 @@
             <p>Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de proporcionar uma experiência relaxante e agradável para eles.</p>
         </div>
     </section>
+   </main>
 
    <footer>
     <div>
