finalizando segunda section

--- a/index.html
+++ b/index.html
@@ -39,19 +39,22 @@
      </div>
      <img class="absolute" src="img/shape.svg" alt="imagem shape" loading="lazy">
     </section>
-    <section>
+    <section id="clinica">
       <img src="img/clinic-img.svg">
+      
+      <div>
       <h2> Cuidado Veterinário de Qualidade</h2>
-      <p>Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.</p>
-      <ul>
-        <li>Consultas de rotina e exames de saúde abrangentes</li>
-        <li>Vacinação e imunização</li>
-        <li>Cirurgias e procedimentos veterinários</li>
-        <li>Tratamento e controle de doenças</li>
-        <li>Odontologia veterinária</li>
-        <li>Atendimento de emergência 24 horas</li>
-        <li>Nutrição e aconselhamento alimentar personalizado</li>
+      <p class="paragrafoTwo">Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.</p>
+      <ul class="list">
+        <li class="list-option">Consultas de rotina e exames de saúde abrangentes</li>
+        <li class="list-option">Vacinação e imunização</li>
+        <li class="list-option">Cirurgias e procedimentos veterinários</li>
+        <li class="list-option">Tratamento e controle de doenças</li>
+        <li class="list-option">Odontologia veterinária</li>
+        <li class="list-option">Atendimento de emergência 24 horas</li>
+        <li class="list-option">Nutrição e aconselhamento alimentar personalizado</li>
       </ul>
+    </div>
     </section>
 
      <section>
