finalizando terceira section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
      <img class="absolute" src="img/shape.svg" alt="imagem shape" loading="lazy">
     </section>
     <section id="clinica">
-      <img src="img/clinic-img.svg">
-      
+      <img src="img/clinic-img.svg" alt="imagem principal" width="480" height="480" loading="lazy">      
       <div>
       <h2> Cuidado Veterinário de Qualidade</h2>
       <p class="paragrafoTwo">Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.</p>
@@ -56,12 +55,13 @@
       </ul>
     </div>
     </section>
-
-     <section>
-      <img src="img/shop-img.svg">
+    <div class="terceiraSection">
+     <section id="farmacia">      
         <h2>Venha conferir nosso PetShop e farmacia</h2>
-        <p>Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.</p>
+        <img src="img/shop-img.svg" alt="imagem farmacia" width="645" height="430" loading="lazy">
+        <p class="paragrafoThree">Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.</p>
     </section>
+    </div>
 
     <section>
         <h2>Ficou alguma dúvida?</h2>
