--- a/index.html
+++ b/index.html
@@ -102,25 +102,31 @@
 
    <footer>
     <div>
-      <h3>Links rápidos</h3>
-      <a href="">Inicio</a>
-      <a href="">Clinica</a>
-      <a href="">Fermacia</a>
-      <a href="">Dúvidas</a>
+      <img src="img/logo.svg" width="250px" alt="Petlife" loading="lazy">
+      <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
     </div>
 
     <div>
-      <h3>Encontre-nos</h3>      
-        <p>Whatsapp:<a href="https://wa.me/553132281234" target="blank">(31) 3228-1234</a></p>
-        <p>Email:<a href="mailto:atendimento@petlife.com">atendimento@petlife.com</a></p>
-        <p>Endereço: Av. Governador Valadares, nº108, Centro</p>
-      </div>
-      
-      <div id="copyright">
-      Desenvolvido por Gabriel Lacôrte
+      <strong class="titulo">Links rápidos</strong>
+      <nav>
+        <a href="#inicio">Inicio</a>
+        <a href="#clinica">Clinica</a>
+        <a href="#farmacia">Farmácia</a>
+        <a href="#duvidas">Dúvidas</a>
+      </nav>
     </div>
+
+    <div>
+      <strong class="titulo">Encontre-nos</strong>
+      <p>Whatsapp:<a href="https://wa.me/5527997279376" target="blank">(31) 3232-9990</a></p>
+      <p>Email:<a href="mailto:atendimento@petlife.com"> atendimento@petlife.com</a></p>
+      <p>Endereço: av sete de setembro, nº200, Centro</p>
     </div>
   </footer>
+  <div id="copyright">
+    Desenvolvido por Gabriel Lacorte
+  </div>
+ 
 
   <script src="/script.js"></script>
   
